--- a/v1/newtab.html
+++ b/v1/newtab.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="top-sites"></div>
     <script src="newtab.js"></script>
 </body>
 </html>
