Touch up styling
Also fix error in header

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     }
 
     body[data-theme="light"] {
-      background-color: white;
+      background-color: lavender;
       color: black;
     }
 
@@ -47,7 +47,7 @@
     }
 
     body[data-theme="light"] .version-link:hover {
-      background-color: darksalmon;
+      background-color: plum;
       color: white;
     }
 
@@ -70,7 +70,7 @@
 </head>
 
 <body>
-  <h1>Welcome to My Minigames Hub!</h1>
+  <h1>Choose your new tab version!</h1>
   <button class="toggle-btn" id="themeToggle">Toggle Dark/Light Mode</button>
   <div>
     <a href="v1/newtab.html" class="version-link">version 1</a>
