--- a/v4/newtab.html
+++ b/v4/newtab.html
@@ -15,9 +15,26 @@
             <input type="text" id="search-bar" placeholder="Search the web...">
         </div>
 
+        <!-- 📌 Category Buttons -->
+        <div class="category-buttons">
+            <button id="btn-productivity">Productivity</button>
+            <button id="btn-gaming">Gaming</button>
+            <button id="btn-media">Media</button>
+            <button id="btn-custom">Custom</button>
+        </div>
+
         <!-- ⭐ Top Sites -->
         <div class="top-sites-wrapper">
             <div id="top-sites"></div>
+        </div>
+
+        <!-- ➕ Custom Bookmarks Section -->
+        <div class="custom-bookmarks">
+            <h3>Custom Bookmarks</h3>
+            <input type="text" id="custom-title" placeholder="Site Name">
+            <input type="url" id="custom-url" placeholder="Site URL">
+            <button id="add-custom">Add</button>
+            <div id="custom-list"></div>
         </div>
     </div>
 
