Update file paths for v3

--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
     <a href="v2/newtab.html" class="version-link">version 2.1</a>
   </div>
   <div>
-    <a href="v3a/newtab.html" class="version-link">version 3a</a>
-    <a href="v3b/newtab.html" class="version-link">version 3b</a>
-    <a href="v3c/newtab.html" class="version-link">version 3c (coming soon)</a>
+    <a href="v3/v3a/newtab.html" class="version-link">version 3a</a>
+    <a href="v3/v3b/newtab.html" class="version-link">version 3b</a>
+    <a href="v3/v3c/newtab.html" class="version-link">version 3c (coming soon)</a>
   </div>
 
   <script>
