Add v4a and v4b to github page

--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@
     <a href="v3/v3b/newtab.html" class="version-link">version 3b</a>
     <a href="v3/v3c/newtab.html" class="version-link">version 3c (coming soon)</a>
   </div>
+  <div>
+    <a href="v4/v4a/newtab.html" class="version-link">version 4a</a>
+    <a href="v4/v4b/newtab.html" class="version-link">version 4b</a>
+  </div>
 
   <script>
     const themeToggle = document.getElementById("themeToggle");
