--- a/index.html
+++ b/index.html
@@ -87,6 +87,11 @@
     <a href="v4/v4a/newtab.html" class="version-link">version 4a</a>
     <a href="v4/v4b/newtab.html" class="version-link">version 4b</a>
   </div>
+  <div>
+    <a href="v5/v5a/newtab.html" class="version-link">version 5a (partial implementation)</a>
+    <a href="v5/v5a/newtab.html" class="version-link">version 5b (coming soon)</a>
+    <a href="v5/v5a/newtab.html" class="version-link">version 5c (coming soon)</a>
+  </div>
 
   <script>
     const themeToggle = document.getElementById("themeToggle");
