--- a/v5/v5a/newtab.html
+++ b/v5/v5a/newtab.html
@@ -11,15 +11,12 @@
 <body>
     <div class="newtab-container">
         <!-- Hopecore <3 -->
-        <div>
-            <button id="hopecore-link">generate hopecore</button>
-        </div>
         <div id="result" style="margin-top: 50px"></div>
         <h2>
-            <div>
+            <!-- <div>
                 for more info, click
                 <a href="https://github.com/mattwydra/projects/blob/main/discord_bots/README.md">here</a>
-            </div>
+            </div> -->
         </h2>
 
         <!-- 🔎 Search Bar -->
