Publish v5a to github pages
Update styling for elements and also add updates to other versions

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <a href="v4/v4b/newtab.html" class="version-link">version 4b</a>
   </div>
   <div>
-    <a href="v5/v5a/newtab.html" class="version-link">version 5a (partial implementation)</a>
+    <a href="v5/v5a/newtab.html" class="version-link">version 5a</a>
     <a href="v5/v5a/newtab.html" class="version-link">version 5b (coming soon)</a>
     <a href="v5/v5a/newtab.html" class="version-link">version 5c (coming soon)</a>
   </div>
