--- a/v5/v5a/newtab.html
+++ b/v5/v5a/newtab.html
@@ -39,8 +39,7 @@
 
         <!-- ➕ Custom Bookmarks Section -->
         <form class="custom-bookmarks" id="custom-bookmarks">
-            <h3 style="background: rgba(0, 0, 0, 0.6); padding: 10px; border-radius: 5px;"><span id="bkmk-text">Custom
-                    Bookmarks</span></h3>
+            <h3 style="background: rgba(0, 0, 0, 0.6); padding: 10px; border-radius: 5px;">Custom Bookmarks</h3>
             <input type="text" id="custom-title" placeholder="Site Name">
             <input type="url" id="custom-url" placeholder="Site URL">
             <button type="submit">Add</button>
