Finish set up for v5c implementation

--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
   </div>
   <div>
     <a href="v5/v5a/newtab.html" class="version-link">version 5a</a>
-    <a href="v5/v5a/newtab.html" class="version-link">version 5b (coming soon)</a>
-    <a href="v5/v5a/newtab.html" class="version-link">version 5c (coming soon)</a>
+    <a href="v5/v5b/newtab.html" class="version-link">version 5b</a>
+    <a href="v5/v5b/newtab.html" class="version-link">version 5c (coming soon)</a>
   </div>
 
   <script>
