--- a/v5/v5c/newtab.html
+++ b/v5/v5c/newtab.html
@@ -29,6 +29,7 @@
 
         <!-- 📌 Category Buttons -->
         <div class="category-buttons">
+            <button id="btn-default">Default</button>
             <button id="btn-productivity">Productivity</button>
             <button id="btn-gaming">Gaming</button>
             <button id="btn-media">Media</button>
