--- a/v5/v5b/newtab.html
+++ b/v5/v5b/newtab.html
@@ -16,10 +16,10 @@
         </div>
         <div id="result" style="margin-top: 50px"></div>
         <h2>
-            <div>
+            <!-- <div>
                 for more info, click
                 <a href="https://github.com/mattwydra/projects/blob/main/discord_bots/README.md">here</a>
-            </div>
+            </div> -->
         </h2>
 
         <!-- 🔎 Search Bar -->
