--- a/v5/v5c/newtab.html
+++ b/v5/v5c/newtab.html
@@ -14,13 +14,16 @@
         <div>
             <button id="hopecore-link">generate hopecore</button>
         </div>
+        <div>
+            <button id="auto-toggle">auto generate: OFF</button>
+        </div>
         <div id="result" style="margin-top: 50px"></div>
-        <h2>
+        <!-- <h2>
             <div>
                 for more info, click
                 <a href="https://github.com/mattwydra/projects/blob/main/discord_bots/README.md">here</a>
             </div>
-        </h2>
+        </h2> -->
 
         <!-- 🔎 Search Bar -->
         <div class="search-wrapper">
