Fix v5c and add description for v5d

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
     <a href="v5/v5a/newtab.html" class="version-link">version 5a</a>
     <a href="v5/v5b/newtab.html" class="version-link">version 5b</a>
     <a href="v5/v5c/newtab.html" class="version-link">version 5c</a>
+    <a href="v5/v5d/newtab.html" class="version-link">version 5d (coming soon)</a>
   </div>
 
   <script>
