Update versioning in main html

--- a/index.html
+++ b/index.html
@@ -73,25 +73,25 @@
   <h1>Choose your new tab version!</h1>
   <button class="toggle-btn" id="themeToggle">Toggle Dark/Light Mode</button>
   <div>
-    <a href="v1/newtab.html" class="version-link">version 1</a>
+    <a href="v1/newtab.html" class="version-link">version 1.0</a>
   </div>
   <div>
     <a href="v2/newtab.html" class="version-link">version 2.1</a>
   </div>
   <div>
-    <a href="v3/v3a/newtab.html" class="version-link">version 3a</a>
-    <a href="v3/v3b/newtab.html" class="version-link">version 3b</a>
-    <a href="v3/v3c/newtab.html" class="version-link">version 3c (coming soon)</a>
+    <a href="v3/v3a/newtab.html" class="version-link">version 3.1</a>
+    <a href="v3/v3b/newtab.html" class="version-link">version 3.2</a>
+    <a href="v3/v3c/newtab.html" class="version-link">version 3.3 (coming soon)</a>
   </div>
   <div>
-    <a href="v4/v4a/newtab.html" class="version-link">version 4a</a>
-    <a href="v4/v4b/newtab.html" class="version-link">version 4b</a>
+    <a href="v4/v4a/newtab.html" class="version-link">version 4.1</a>
+    <a href="v4/v4b/newtab.html" class="version-link">version 4.2</a>
   </div>
   <div>
-    <a href="v5/v5a/newtab.html" class="version-link">version 5a</a>
-    <a href="v5/v5b/newtab.html" class="version-link">version 5b</a>
-    <a href="v5/v5c/newtab.html" class="version-link">version 5c</a>
-    <a href="v5/v5d/newtab.html" class="version-link">version 5d (coming soon)</a>
+    <a href="v5/v5a/newtab.html" class="version-link">version 5.1</a>
+    <a href="v5/v5b/newtab.html" class="version-link">version 5.2</a>
+    <a href="v5/v5c/newtab.html" class="version-link">version 5.3</a>
+    <a href="v5/v5d/newtab.html" class="version-link">version 5.4 (coming soon)</a>
   </div>
 
   <script>
