Add and style HUD Hide toggle element for v5.4

--- a/v5/v5d/newtab.html
+++ b/v5/v5d/newtab.html
@@ -17,6 +17,9 @@
         <div>
             <button id="auto-toggle">auto generate: OFF</button>
         </div>
+        <div>
+            <button id="HUD-toggle">Hide HUD: OFF</button>
+        </div>
         <div id="result" style="margin-top: 50px"></div>
         <!-- <h2>
             <div>
