Update README and fix logic error
Was referencing something incorrectly--HUD is not the correct nomenclature; updated to 'bookmarks'

--- a/v5/v5d/newtab.html
+++ b/v5/v5d/newtab.html
@@ -18,7 +18,7 @@
             <button id="auto-toggle">auto generate: OFF</button>
         </div>
         <div>
-            <button id="HUD-toggle">Hide HUD: OFF</button>
+            <button id="HUD-toggle">hide bookmarks: OFF</button>
         </div>
         <div id="result" style="margin-top: 50px"></div>
         <!-- <h2>
