--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <a href="v5/v5a/newtab.html" class="version-link">version 5.1</a>
     <a href="v5/v5b/newtab.html" class="version-link">version 5.2</a>
     <a href="v5/v5c/newtab.html" class="version-link">version 5.3</a>
-    <a href="v5/v5d/newtab.html" class="version-link">version 5.4 (coming soon)</a>
+    <a href="v5/v5d/newtab.html" class="version-link">version 5.4 (partial implementation)</a>
   </div>
 
   <script>
