Improve styling and remove partial implementation specifier

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       text-decoration: none;
       border-radius: 5px;
       font-size: 1.2em;
+      transition: background-color 0.3s, color 0.3s;
     }
 
     body[data-theme="light"] .version-link {
@@ -60,6 +61,7 @@
       cursor: pointer;
       background-color: darkgray;
       color: black;
+      transition: background-color 0.3s, color 0.3s;
     }
 
     body[data-theme="light"] .toggle-btn {
@@ -91,7 +93,7 @@
     <a href="v5/v5a/newtab.html" class="version-link">version 5.1</a>
     <a href="v5/v5b/newtab.html" class="version-link">version 5.2</a>
     <a href="v5/v5c/newtab.html" class="version-link">version 5.3</a>
-    <a href="v5/v5d/newtab.html" class="version-link">version 5.4 (partial implementation)</a>
+    <a href="v5/v5d/newtab.html" class="version-link">version 5.4</a>
   </div>
 
   <script>
