--- a/v6/pre_integration/index.html
+++ b/v6/pre_integration/index.html
@@ -14,6 +14,7 @@
         <input type="text" id="username" placeholder="Enter MAL Username">
         <button onclick="fetchAnime()">Generate Background</button>
         <p id="status"></p>
+        <div id="buttonContainer"></div> <!-- Added this for anime buttons -->
     </div>
     <script src="script.js"></script>
 </body>
