--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
     <a href="v5/v5c/newtab.html" class="version-link">version 5.3</a>
     <a href="v5/v5d/newtab.html" class="version-link">version 5.4</a>
   </div>
+  <div>
+    <a href="v6/index.html" class="version-link">pre-v6</a>
+  </div>
 
   <script>
     const wallpapers = ["wallpapers/guts2.jpg"];
