Make transition times constant
Also smooth out transition for header

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       text-align: center;
       margin: 0;
       padding: 0;
-      transition: background-color 0.3s, color 0.3s;
+      transition: background-color 0.5s, color 0.5s;
     }
 
     .background {
@@ -47,9 +47,15 @@
       margin-top: 20px;
     }
 
+    #header {
+      transition: background-color 0.5s, color 0.5s;
+      padding: 10px 20px;
+    }
+
     body[data-theme="light"] #header {
       background-color: rgba(59, 59, 59, 0.788);
       padding: 10px 20px;
+      transition: background-color 0.5s, color 0.5s;
     }
 
     .version-link {
@@ -61,7 +67,7 @@
       text-decoration: none;
       border-radius: 5px;
       font-size: 1.2em;
-      transition: background-color 0.3s, color 0.3s;
+      transition: background-color 0.5s, color 0.5s;
     }
 
     body[data-theme="light"] .version-link {
@@ -88,7 +94,7 @@
       cursor: pointer;
       background-color: darkgray;
       color: black;
-      transition: background-color 0.3s, color 0.3s;
+      transition: background-color 0.5s, color 0.5s;
     }
 
     body[data-theme="light"] .toggle-btn {
