Styling and README changes

--- a/index.html
+++ b/index.html
@@ -50,12 +50,14 @@
     #header {
       transition: background-color 0.5s, color 0.5s;
       padding: 10px 20px;
+      border-radius: 7px;
     }
 
     body[data-theme="light"] #header {
       background-color: rgba(59, 59, 59, 0.788);
       padding: 10px 20px;
       transition: background-color 0.5s, color 0.5s;
+      border-radius: 7px;
     }
 
     .version-link {
