Add v3 link to main page
Also add v4 for prep

--- a/v6/index.html
+++ b/v6/index.html
@@ -80,6 +80,12 @@
     <div>
         <a href="pre_integration/v2/index.html" class="version-link">version 2</a>
     </div>
+    <div>
+        <a href="pre_integration/v3/index.html" class="version-link">version 3</a>
+    </div>
+    <div>
+        <a href="pre_integration/v4/index.html" class="version-link">version 4</a>
+    </div>
 
     <script>
         const themeToggle = document.getElementById("themeToggle");
