--- a/v6/pre_integration/v3/index.html
+++ b/v6/pre_integration/v3/index.html
@@ -16,6 +16,9 @@
         <p id="status"></p>
         <div id="buttonContainer"></div> <!-- Added this for anime buttons -->
     </div>
+    <div>
+        <button id="MAL-toggle">MAL Prompt: SHOWN</button>
+    </div>
     <script src="script.js"></script>
 </body>
 
