Finalize v3 index.html

--- a/v6/pre_integration/v3/index.html
+++ b/v6/pre_integration/v3/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="container">
-        <h1>MyAnimeList Background Generator</h1>
+        <h1><span id="header">MyAnimeList Background Generator</span></h1>
         <input type="text" id="username" placeholder="Enter MAL Username">
         <button onclick="fetchAnime()">Generate Background</button>
         <p id="status"></p>
