--- a/v6/pre_integration/v4/index.html
+++ b/v6/pre_integration/v4/index.html
@@ -10,11 +10,14 @@
 
 <body>
     <div class="container">
-        <h1>MyAnimeList Background Generator</h1>
+        <h1><span id="header">MyAnimeList Background Generator</span></h1>
         <input type="text" id="username" placeholder="Enter MAL Username">
         <button onclick="fetchAnime()">Generate Background</button>
         <p id="status"></p>
         <div id="buttonContainer"></div> <!-- Added this for anime buttons -->
+    </div>
+    <div>
+        <button id="MAL-toggle">MAL Prompt: SHOWN</button>
     </div>
     <script src="script.js"></script>
 </body>
