--- a/v6/pre_integration/v4/index.html
+++ b/v6/pre_integration/v4/index.html
@@ -78,10 +78,10 @@
         <a href="mal_gen/index.html" class="version-link">enter your MAL profile</a>
     </div>
     <div>
-        <a href="user_gen/character/index.html" class="version-link">enter an anime</a>
+        <a href="user_gen/anime/index.html" class="version-link">enter an anime</a>
     </div>
     <div>
-        <a href="user_gen/anime/index.html" class="version-link">enter a character</a>
+        <a href="user_gen/character/index.html" class="version-link">enter a character</a>
     </div>
 
     <script>
