Add functionality for anime bg gen

--- a/v6/pre_integration/v4/user_gen/anime/index.html
+++ b/v6/pre_integration/v4/user_gen/anime/index.html
@@ -4,20 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MAL Background Generator</title>
+    <title>Anime Background Generator</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <div class="container">
-        <h1><span id="header">MyAnimeList Background Generator</span></h1>
-        <input type="text" id="username" placeholder="Enter MAL Username">
+        <h1><span id="header">Anime Background Generator</span></h1>
+        <input type="text" id="animeName" placeholder="Enter anime">
         <span id="generate-btn"><button onclick="fetchAnime()">Generate Background</button></span>
         <p id="status"></p>
         <div id="buttonContainer"></div> <!-- Added this for anime buttons -->
     </div>
     <div>
-        <button id="MAL-toggle">MAL Prompt: SHOWN</button>
+        <button id="btn-toggle">Prompt: SHOWN</button>
     </div>
     <script src="script.js"></script>
 </body>
