--- a/v6/pre_integration/v4/user_gen/character/index.html
+++ b/v6/pre_integration/v4/user_gen/character/index.html
@@ -10,14 +10,14 @@
 
 <body>
     <div class="container">
-        <h1><span id="header">MyAnimeList Background Generator</span></h1>
-        <input type="text" id="username" placeholder="Enter MAL Username">
+        <h1><span id="header">Character Background Generator</span></h1>
+        <input type="text" id="characterName" placeholder="Enter character">
         <span id="generate-btn"><button onclick="fetchAnime()">Generate Background</button></span>
         <p id="status"></p>
         <div id="buttonContainer"></div> <!-- Added this for anime buttons -->
     </div>
     <div>
-        <button id="MAL-toggle">MAL Prompt: SHOWN</button>
+        <button id="btn-toggle">Prompt: SHOWN</button>
     </div>
     <script src="script.js"></script>
 </body>
