Add v5 redirection element

--- a/v6/index.html
+++ b/v6/index.html
@@ -86,6 +86,9 @@
     <div>
         <a href="pre_integration/v4/index.html" class="version-link">version 4</a>
     </div>
+    <div>
+        <a href="pre_integration/v5/index.html" class="version-link">version 5</a>
+    </div>
 
     <script>
         const themeToggle = document.getElementById("themeToggle");
