Add new field for v5 feature
Add field for tiling most recently watched anime for background as opposed to single image. Allow toggling back and forth

--- a/v6/pre_integration/v5/mal_gen/index.html
+++ b/v6/pre_integration/v5/mal_gen/index.html
@@ -13,6 +13,7 @@
         <h1><span id="header">MyAnimeList Background Generator</span></h1>
         <input type="text" id="username" placeholder="Enter MAL Username">
         <span id="generate-btn"><button onclick="fetchAnime()">Generate Background</button></span>
+        <button id="toggle-background-mode" onclick="toggleTiledBackground()">Switch to Tiled Mode</button>
         <p id="status"></p>
         <div id="buttonContainer"></div> <!-- Added this for anime buttons -->
     </div>
