Add new background-container element
New implementation for the tiled background

--- a/v6/pre_integration/v5/mal_gen/index.html
+++ b/v6/pre_integration/v5/mal_gen/index.html
@@ -14,6 +14,7 @@
         <input type="text" id="username" placeholder="Enter MAL Username">
         <span id="generate-btn"><button onclick="fetchAnime()">Generate Background</button></span>
         <button id="toggle-background-mode" onclick="toggleTiledBackground()">Switch to Tiled Mode</button>
+        <div id="background-container"></div>
         <p id="status"></p>
         <div id="buttonContainer"></div> <!-- Added this for anime buttons -->
     </div>
