Add new version to main page

--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
   </div>
   <div>
     <a href="v6/index.html" class="version-link">pre-v6</a>
+    <a href="v6/integration/base_code/newtab.html" class="version-link">v6</a>
   </div>
 
   <script>
