Add new redirect link for new integration

--- a/v6/integration/index.html
+++ b/v6/integration/index.html
@@ -83,6 +83,9 @@
     <div>
         <a href="user_gen/character/index.html" class="version-link">enter a character</a>
     </div>
+    <div>
+        <a href="base_code/newtab.html" class="version-link">generate hopecore</a>
+    </div>
 
     <script>
         const themeToggle = document.getElementById("themeToggle");
