Add redirect button for hopecore

--- a/v6/integration/base_code/newtab.html
+++ b/v6/integration/base_code/newtab.html
@@ -65,6 +65,10 @@
         const button = document.getElementById("switch-link");
         const originalText = button.innerText; // Store original text
 
+        button.addEventListener("click", onclick => {
+            window.location.href = "../index.html";
+        });
+
         function changeText() {
             button.innerText = "STYLE: Change style?";
         }
