--- a/v6/integration/mal_gen/index.html
+++ b/v6/integration/mal_gen/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MAL Background Generator</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../FFNT_styles.css">
+    <link rel="stylesheet" href="mal_styles.css">
+
 </head>
 
 <body>
@@ -13,11 +15,45 @@
         <div>
             <button id="switch-link" onmouseover="changeText()" onmouseout="resetText()">STYLE: MAL profile</button>
         </div>
-        <h1><span id="header">MyAnimeList Background Generator</span></h1>
-        <input type="text" id="username" placeholder="Enter MAL Username">
-        <span id="generate-btn"><button onclick="fetchAnime()">Generate Background</button></span>
-        <button id="toggle-background-mode" onclick="toggleTiledBackground()">Switch to Tiled Mode</button>
+        <div>
+            <button id="HUD-toggle">Bookmarks: SHOWN</button>
+        </div>
+        <h1 id="header">MyAnimeList Background Generator</h1>
+        <span id="generation">
+            <input type="text" id="username" placeholder="Enter MAL Username">
+            <span id="generate-btn"><button onclick="fetchAnime()">Generate Background</button></span>
+            <button id="toggle-background-mode" onclick="toggleTiledBackground()">Switch to Tiled Mode</button>
+        </span>
         <div id="background-container"></div>
+
+        <!-- 🔎 Search Bar -->
+        <div class="search-wrapper">
+            <input type="text" id="search-bar" placeholder="Search the web...">
+        </div>
+
+        <!-- 📌 Category Buttons -->
+        <div class="category-buttons">
+            <button id="btn-default">Default</button>
+            <button id="btn-productivity">Productivity</button>
+            <button id="btn-gaming">Gaming</button>
+            <button id="btn-media">Media</button>
+            <button id="btn-custom">Custom</button>
+        </div>
+
+        <!-- ⭐ Top Sites -->
+        <div class="top-sites-wrapper">
+            <div id="top-sites"></div>
+        </div>
+
+        <!-- ➕ Custom Bookmarks Section -->
+        <form class="custom-bookmarks" id="custom-bookmarks">
+            <h3>Custom Bookmarks</h3>
+            <input type="text" id="custom-title" placeholder="Site Name">
+            <input type="url" id="custom-url" placeholder="Site URL">
+            <button type="submit">Add</button>
+            <div id="custom-list"></div>
+        </form>
+
         <p id="status"></p>
         <div id="buttonContainer"></div> <!-- Added this for anime buttons -->
     </div>
