--- a/v6/integration/user_gen/anime/index.html
+++ b/v6/integration/user_gen/anime/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anime Background Generator</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../../FFNT_styles.css">
+    <link rel="stylesheet" href="anime_styles.css">
+
 </head>
 
 <body>
@@ -14,10 +16,41 @@
         <div>
             <button id="switch-link" onmouseover="changeText()" onmouseout="resetText()">STYLE: anime title</button>
         </div>
+        <div>
+            <button id="HUD-toggle">Bookmarks: SHOWN</button>
+        </div>
+        <h1 id="header">Anime Background Generator</h1>
+        <span id="generation">
+            <input type="text" id="animeName" placeholder="Enter anime">
+            <span id="generate-btn"><button onclick="fetchAnime()">Generate Background</button></span>
+        </span>
+        <!-- 🔎 Search Bar -->
+        <div class="search-wrapper">
+            <input type="text" id="search-bar" placeholder="Search the web...">
+        </div>
 
-        <h1><span id="header">Anime Background Generator</span></h1>
-        <input type="text" id="animeName" placeholder="Enter anime">
-        <span id="generate-btn"><button onclick="fetchAnime()">Generate Background</button></span>
+        <!-- 📌 Category Buttons -->
+        <div class="category-buttons">
+            <button id="btn-default">Default</button>
+            <button id="btn-productivity">Productivity</button>
+            <button id="btn-gaming">Gaming</button>
+            <button id="btn-media">Media</button>
+            <button id="btn-custom">Custom</button>
+        </div>
+
+        <!-- ⭐ Top Sites -->
+        <div class="top-sites-wrapper">
+            <div id="top-sites"></div>
+        </div>
+
+        <!-- ➕ Custom Bookmarks Section -->
+        <form class="custom-bookmarks" id="custom-bookmarks">
+            <h3>Custom Bookmarks</h3>
+            <input type="text" id="custom-title" placeholder="Site Name">
+            <input type="url" id="custom-url" placeholder="Site URL">
+            <button type="submit">Add</button>
+            <div id="custom-list"></div>
+        </form>
         <p id="status"></p>
         <div id="buttonContainer"></div> <!-- Added this for anime buttons -->
     </div>
